--- a/src/themes/gus.scss
+++ b/src/themes/gus.scss
@@ -1,159 +1,78 @@
 // ----------------------------------------------------------
 // GLOBAL TOKENS
-// Theme Midnight
+// Theme Soft Blue
 // ----------------------------------------------------------
 
-.theme {
+@layer theme {
+  .theme {
     // --------------------------------------------------------
     // Colors (Branding Core)
     // --------------------------------------------------------
-  
+
     // PALETTE
-    --fs-color-main-0: white;
-    --fs-color-main-1: #0000CD;
-    --fs-color-main-2: #4169E1;
-    --fs-color-main-3: #0000CD;
-    --fs-color-main-4: #6535d6;
-    --fs-color-main-5: #FF8C00;
-  
-    --fs-color-accent-0: #0000CD;
-    --fs-color-accent-1: #001082;
-    --fs-color-accent-2: #0017b9;
-    --fs-color-accent-3: #1930d3;
-    --fs-color-accent-4: #4d62ff;
-  
-    --fs-color-neutral-0: #110035;
-    --fs-color-neutral-1: #260f5a;
-    --fs-color-neutral-2: #74808b;
-    --fs-color-neutral-3: #9099a2;
-    --fs-color-neutral-4: #c7ccd1;
-    --fs-color-neutral-5: #e3e6e8;
-    --fs-color-neutral-6: #816ba9;
-    --fs-color-neutral-7: #FFD700;
-  
+    --fs-color-main-0: #ecf0ff;
+    --fs-color-main-1: #d8e2ff;
+    --fs-color-main-2: #005113;
+    --fs-color-main-3: #035b25;
+    --fs-color-main-4: #068419;
+
+    --fs-color-accent-0: #ebdcff;
+    --fs-color-accent-1: #8d50fd;
+    --fs-color-accent-2: #732fe2;
+    --fs-color-accent-3: #5900c8;
+    --fs-color-accent-4: #4700a0;
+
     // HIERARCHY
-    --fs-color-primary-bkg: var(--fs-color-main-3);
-    --fs-color-primary-bkg-light: var(--fs-color-main-2);
-    --fs-color-primary-text: var(--fs-color-neutral-7);
-    --fs-input-field-color: var(--fs-color-neutral-0);
-  
-    --fs-color-secondary-text: var(--fs-color-main-3);
-  
-    --fs-color-tertiary-bkg-hover: var(--fs-color-main-2);
-    --fs-color-tertiary-bkg-active: var(--fs-color-main-3);
-  
-    // COMPONENTS & STATES
-    --fs-color-body-bkg: var(--fs-color-main-0);
-    --fs-body-bkg: var(--fs-color-main-5);
-    --fs-color-secondary-bkg: var(--fs-color-main-0);
-    /*--fs-body-bkg: linear-gradient(
-      0deg,
-      var(--fs-color-main-0) 0%,
-      var(--fs-color-main-5) 52%,
-      var(--fs-color-main-0) 100%
-    );
-    */
-    --fs-color-text-display: var(--fs-color-neutral-7);
-  
-    --fs-color-link: var(--fs-color-neutral-7);
-    --fs-color-link-inverse: var(--fs-color-neutral-7);
-  
+    --fs-color-primary-bkg: var(--fs-color-main-4);
+    --fs-color-primary-bkg-active: var(--fs-color-main-2);
+    --fs-color-primary-bkg-light: var(--fs-color-main-0);
+    --fs-color-primary-bkg-light-active: var(--fs-color-main-1);
+
     // SITUATIONS
-    --fs-color-success-text: #50b191;
-    --fs-color-success-bkg: #007043;
-    --fs-color-warning-bkg: #b17000;
-    --fs-color-disabled-bkg: var(--fs-color-main-3);
-  
+    --fs-color-success-bkg: #cee8de;
+    --fs-color-warning-bkg: #f6e0ba;
+
+    // COMPONENTS & STATES
+    --fs-color-text-display: var(--fs-color-main-4);
+
+    --fs-color-action-bkg: var(--fs-color-accent-3);
+    --fs-color-action-bkg-hover: var(--fs-color-accent-2);
+    --fs-color-action-bkg-active: var(--fs-color-accent-1);
+
     // --------------------------------------------------------
     // Typography (Branding Core)
     // --------------------------------------------------------
-  
+
     // FACE
-    --fs-text-face-body: 'Raleway', sans-serif;
-  
-    // NUMERIC SCALE
-    --fs-text-size-base: 18px; // 1rem
-    --fs-text-size-0: 14px; // Smallest
-    --fs-text-size-1: 16px; // Smaller
-  
+    --fs-text-face-body: 'Lato', -apple-system, system-ui, BlinkMacSystemFont, sans-serif;
+
     // --------------------------------------------------------
     // Refinements
     // --------------------------------------------------------
-  
+
     // BORDERS
-    --fs-border-radius: 20px;
-  
-    --fs-border-width: 2px;
-  
-    --fs-border-color-light: var(--fs-color-main-3);
-    --fs-border-color: var(--fs-color-main-3);
-    --fs-border-color-hover: var(--fs-color-main-2);
-    --fs-border-color-active: var(--fs-color-main-3);
-  
+    --fs-border-radius: 0.25rem;
+
     // SHADOW
-    --fs-shadow-hover: 0 0 10px rgb(40 21 132 / 30%), 0 0 0 10px var(--fs-color-main-1);
-  
+    --fs-shadow: none;
+    --fs-shadow-darker: 0 0 10px rgb(0 0 0 / 20%);
+    --fs-shadow-hover: 0 1px 4px rgb(0 0 0 / 10%), 0 6px 8px rgb(0 0 0 / 10%);
+
     // --------------------------------------------------------
     // FS UI Components
     // --------------------------------------------------------
-  
+    // Add here the customizations for FastStore UI components.
+
     --fs-logo-width: 8rem;
 
-    .section .text__title-section{
-      color: white;
-    }
-  
-    .section {
-      // Add here the customizations for FastStore UI components.
-  
-      [data-fs-skeleton] {
-        --fs-skeleton-shimmer-bkg-color: var(--fs-color-disabled-bkg);
+    [data-fs-product-card] {
+      --fs-product-card-border-color: transparent;
+      --fs-product-card-border-color-hover: var(--fs-border-color-light);
+
+      &[data-fs-product-card-bordered='true'] {
+        --fs-product-card-border-color: var(--fs-border-color-light);
       }
-  
-      [data-fs-hero] {
-        --fs-hero-image-border-radius: 130px 0 0 130px;
-        --fs-hero-main-bkg-color: var(--fs-color-main-1);
-      }
-  
-      [data-fs-button] {
-        --fs-button-border-radius: var(--fs-border-radius-pill);
-  
-        --fs-button-primary-inverse-text-color: var(--fs-color-neutral-0);
-        --fs-button-primary-inverse-text-color-hover: var(--fs-color-text);
-        --fs-button-primary-inverse-text-color-active: var(--fs-color-neutral-7);
-  
-        --fs-button-primary-border-color: var(--fs-color-neutral-7);
-  
-        --fs-button-tertiary-text-color-active: var(--fs-color-text);
-      }
-  
-      [data-fs-input] {
-        --fs-input-text-size: 16px;
-        background-color: var(--fs-color-main-1);
-      }
-  
-      [data-fs-input-field] {
-        --fs-input-field-size: 16px;
-      }
-  
-      [data-fs-product-card] {
-        --fs-product-card-padding: var(--fs-spacing-2) var(--fs-spacing-2) var(
-            --fs-spacing-4
-          ) var(--fs-spacing-2);
-        --fs-product-card-bkg-color: var(--fs-color-main-0);
-        --fs-product-card-img-scale-hover: 1.05;
-      }
-  
-      [data-fs-newsletter] {
-        --fs-newsletter-text-color: var(--fs-color-neutral-0);
-      }
-  
-      [data-fs-navbar] {
-        --fs-navbar-bkg-color: var(--fs-color-main-0);
-      }
-  
-      [data-fs-footer] {
-        --fs-footer-bkg-color: var(--fs-color-main-1);
-      }
+
     }
   }
+}
